docs: frame pooling REFUTED before implementation — GC pause is 0.5% of recursion-fib, so the ceiling is below this host's noise; the 25 GB of allocation points at unboxing instead